--- a/index.css
+++ b/index.css
@@ -1,26 +1,95 @@
-.primary__container {
+/***************************
+        GLOBAL RESET
+****************************/
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+/***************************
+          CONTAINER 
+****************************/
+.container {
+  height: 1200px;
+  width: 1600px;
+  background-color: hsl(226, 43%, 10%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/***************************
+          GRID 
+****************************/
+.grid {
   display: grid;
-  font-family: sans-serif;
+  background-color: salmon;
+  width: 43rem;
   grid-template-columns: 10rem 10rem 10rem 10rem;
   grid-template-rows: 10rem 10rem;
-}
-
-.first__container {
-  display: flex;
-  flex-direction: column;
-}
-
-.first__container__element--1 {
-  padding: 1rem 1rem;
-}
-
-.first__container__element--1 :nth-child(1) {
-  width: 3rem;
-}
-
-.first__container__element--2 {
-  display: flex;
-  flex-direction: column;
+  margin: 20rem;
   gap: 1rem;
-  padding: 1rem 1rem;
+}
+
+/***************************
+          TALL CARD
+****************************/
+.tall--card {
+  background-color: hsl(235, 46%, 20%);
+  grid-row: 1 / 3;
+  border-radius: 15px;
+}
+
+/***************************
+          TOP CARD
+****************************/
+.top--card {
+  height: 70%;
+  background-color: hsl(246, 80%, 60%);
+  border-radius: 15px;
+}
+
+.author-img {
+  width: 4.6rem;
+  padding: 1rem;
+}
+
+.report {
+  padding: 0.7rem;
+  color: hsl(236, 100%, 87%);
+}
+
+.info {
+  color: white;
+  padding: 0 1rem;
+  font-size: 28px;
+}
+
+/***************************
+          BOTOM CARD
+****************************/
+.bottom--card {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem 1rem 1rem 1.3rem;
+  gap: 0.7rem;
+}
+
+.bottom--card__link {
+  text-decoration: none;
+  color: hsl(236, 100%, 87%);
+  font-size: 0.8rem;
+}
+
+.bottom--card__link:active {
+  color: hsl(236, 100%, 87%);
+}
+
+.bottom--card__link:visited {
+  color: hsl(236, 100%, 87%);
+}
+
+.bottom--card__link:hover {
+  color: white;
 }
