--- a/index.css
+++ b/index.css
@@ -151,9 +151,29 @@
   background-image: url(/images/icon-work.svg);
 }
 
-/* .card__icon--play {
+.card__icon--play {
   background-image: url(/images/icon-play.svg);
-} */
+}
+
+.card__icon--study {
+  background-image: url(/images/icon-study.svg);
+}
+
+.card__icon--exercise {
+  background-image: url(/images/icon-exercise.svg);
+  height: 35px;
+  top: 3px;
+  right: 8px;
+}
+
+.card__icon--social {
+  background-image: url(/images/icon-social.svg);
+  height: 60px;
+}
+
+.card__icon--selfcare {
+  background-image: url(/images/icon-self-care.svg);
+}
 
 /***************************
      WORK--CARD__BOTTOM
@@ -162,6 +182,10 @@
   background-color: hsl(235, 46%, 20%);
   height: 82%;
   border-radius: 15px;
+}
+
+.card__bottom:hover {
+  background-color: hsl(235, 46%, 40%);
 }
 
 .card__bottom__head {
