--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@
 ****************************/
 .container {
   height: 1200px;
-  width: 1600px;
+  /* width: 1600px; */
   background-color: hsl(226, 43%, 10%);
   display: flex;
   flex-direction: column;
@@ -31,6 +31,7 @@
   grid-template-rows: 10rem 10rem;
   margin: 20rem;
   gap: 1rem;
+  align-content: center;
 }
 
 /***************************
