--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@
 .container {
   background-color: hsl(226, 43%, 10%);
   display: flex;
-  flex-direction: column;
+  height: 100vh;
   align-items: center;
   justify-content: center;
 }
@@ -24,11 +24,9 @@
 ****************************/
 .grid {
   display: grid;
-  /* background-color: salmon; */
   width: 43rem;
   grid-template-columns: 10rem 10rem 10rem 10rem;
   grid-template-rows: 10rem 10rem;
-  margin: 20rem;
   gap: 1rem;
 }
 
@@ -100,6 +98,8 @@
 ****************************/
 .card {
   border-radius: 15px;
+  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 20px;
 }
 
 .card--work {
@@ -179,8 +179,9 @@
 ****************************/
 .card__bottom {
   background-color: hsl(235, 46%, 20%);
-  height: 82%;
+  height: 80%;
   border-radius: 15px;
+
   cursor: pointer;
 }
 
