--- a/index.css
+++ b/index.css
@@ -24,9 +24,8 @@
 ****************************/
 .grid {
   display: grid;
-  width: 43rem;
   grid-template-columns: 10rem 10rem 10rem 10rem;
-  grid-template-rows: 10rem 10rem;
+  grid-auto-rows: 10rem;
   gap: 1rem;
 }
 
